crates/biome_js_analyze/tests/specs/nursery/noPlaywrightUselessAwait/invalid/page-frame.js
await page.frame('iframe');
await page.frames();
await page.url();

